--- a/app/src/main/res/menu/drop_down_menu.xml
+++ b/app/src/main/res/menu/drop_down_menu.xml
@@ -4,7 +4,7 @@
     >
     <item
         android:id="@+id/monprofil"
-        android:icon="@drawable/ic_person"
+        android:icon="@drawable/ic_person_1"
         android:title="@string/monprofil"
         app:showAsAction="ifRoom" />
     <item
