--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -19,6 +19,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/prf"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
@@ -122,21 +123,53 @@
                 android:paddingLeft="20dp"
                 android:text="CIN"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal"
+            android:paddingLeft="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/ic_star"/>
+            <TextView
+                android:id="@+id/utilisateur_rate"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:text="Rating"/>
+
+            <Button
+                android:id="@+id/evaluer"
+                android:layout_width="104dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="100dp"
+                android:background="@drawable/btn_connect_facebook"
+                android:backgroundTint="@color/colorAccent"
+                android:drawableStart="@drawable/ic_star"
+                android:text="@string/Evaluer"
+                android:textColor="@color/colorPrimary" />
+        </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal"
-        android:paddingLeft="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_marginTop="25dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingLeft="25dp">
 
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="@string/Evaluer"
-            android:textColor="@color/white"
-            android:background="@drawable/btn_connect_facebook"/>
+<!--        <Button-->
+<!--            android:id="@+id/evaluer"-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@drawable/btn_connect_facebook"-->
+<!--            android:text="@string/Evaluer"-->
+<!--            android:textColor="@color/white" />-->
 
     </LinearLayout>
 
